<resources>
    <string name="facebook_app_id">2136256193342758</string>
    <string name="fb_login_protocol_scheme">fb2136256193342758</string>

    <string name="app_name">Travel Assistant</string>
    <string name="username_label">EMAIL/PHONE</string>
    <string name="password_label">PASSWORD</string>
    <string name="full_name_label">FULL NAME</string>
    <string name="gender_label">GENDER</string>
    <string name="dob_label">DAY OF BIRTH</string>
    <string name="address_label">ADDRESS</string>
    <string name="email_label">EMAIL</string>
    <string name="phone_label">PHONE</string>
    <string name="confirm_password_label">CONFIRM PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="list_tour">List Tour</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="instruct_forgot_password">Select which contact details you will use to reset your password:</string>
    <string name="via_sms">   Via sms</string>
    <string name="via_email">Via email</string>
    <string name="submit_button">Submit</string>
    <string name="search_hint">Search Here...</string>
    <string name="create_tour_str">Create tour</string>
    <string name="tour_name_label">Tour name</string>
    <string name="start_date_label">Start date</string>
    <string name="end_day_label">End date</string>
    <string name="start_place_label">Start place</string>
    <string name="end_place_label">End place</string>
    <string name="hint_to_select_start_end_place">Choose start and end place</string>
    <string name="adults_label">Adults</string>
    <string name="children_label">Children</string>
    <string name="min_cost_label">Min cost</string>
    <string name="max_cost_label">Max cost</string>
    <string name="choose_tour_image_hint">Choose tour image</string>
    <string name="radio_button_create_tour">Is this your private trip ?</string>
    <string name="create_text_button">Create</string>
    <string name="select_date_hint">Select date</string>
    <string name="title_dialog">Exit</string>
    <string name="message_dialog">Press YES to exit.\nPress NO to cancel.</string>
    <string name="title_activity_stop_point_map">Map</string>
    <string name="create_stop_point">CREATE STOP POINT</string>
    <string name="additional_info">(first and second point are origin and destination)</string>
    <string name="list_stop_point_label">List Stop Point</string>
    <string name="stop_point_info_label">Stop point information</string>
    <string name="stop_point_name">Stop point name</string>
    <string name="stop_point_serviceType">Service type</string>
    <string name="stop_point_address">Address</string>
    <string name="stop_point_province">Province</string>
    <string name="stop_point_min_cost">Min cost</string>
    <string name="stop_point_max_cost">Max cost</string>
    <string name="stop_point_arrive_at">Arrive at</string>
    <string name="stop_point_leave_at">Leave at</string>
    <string name="stop_point_time">Time</string>
    <string name="stop_point_select_date">Select date</string>
    <string name="stop_point_save">SAVE</string>
    <string name="comments_title">Comments</string>
    <string name="members_title">Members</string>
    <string-array name="list_province_name">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Bình Dương</item>
        <item>Đồng Nai</item>
        <item> Khánh Hòa</item>
        <item>Hải Phòng</item>
        <item> Long An</item>
        <item>Quảng Nam</item>
        <item>Bà Rịa Vũng Tàu</item>
        <item>Đắk Lắk</item>
        <item>Cần Thơ</item>
        <item>Bình Thuận</item>
        <item>Lâm Đồng</item>
        <item>Thừa Thiên Huế</item>
        <item>Kiên Giang</item>
        <item>Bắc Ninh</item>
        <item>Quảng Ninh</item>
        <item>Thanh Hóa</item>
        <item>Nghệ An</item>
        <item>Hải Dương</item>
        <item>Gia Lai</item>
        <item>Bình Phước</item>
        <item>Hưng Yên</item>
        <item>Bình Định</item>
        <item>Tiền Giang</item>
        <item>Thái Bình</item>
        <item>Bắc Giang</item>
        <item>Hòa Bình</item>
        <item>An Giang</item>
        <item>Vĩnh Phúc</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Lào Cai</item>
        <item>Nam Định</item>
        <item>Quảng Ngãi</item>
        <item>Bến Tre</item>
        <item>Đắk Nông</item>
        <item>Cà Mau</item>
        <item>Vĩnh Long</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Ninh Thuận</item>
        <item>Phú Yên</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Đồng Tháp</item>
        <item>Sóc Trăng</item>
        <item>Kon Tum</item>
        <item>Quảng Bình</item>
        <item>Quảng Trị</item>
        <item>Trà Vinh</item>
        <item>Hậu Giang</item>
        <item>Sơn La</item>
        <item>Bạc Liêu</item>
        <item>Yên Bái</item>
        <item>Tuyên Quang</item>
        <item>Điện Biên</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Hà Giang</item>
        <item>Bắc Kạn</item>
        <item>Cao Bằng</item>
    </string-array>

    <string-array name="list_province_id">
        <item>SG</item>
        <item>HN</item>
        <item>DDN</item>
        <item>BD</item>
        <item>DNA</item>
        <item>KH</item>
        <item>HP</item>
        <item>LA</item>
        <item>QNA</item>
        <item>VT</item>
        <item>DDL</item>
        <item>CT</item>
        <item>BTH</item>
        <item>LDD</item>
        <item>TTH</item>
        <item>KG</item>
        <item>BN</item>
        <item>QNI</item>
        <item>TH</item>
        <item>NA</item>
        <item>HD</item>
        <item>GL</item>
        <item>BP</item>
        <item>HY</item>
        <item>BDD</item>
        <item>TG</item>
        <item>TB</item>
        <item>BG</item>
        <item>HB</item>
        <item>AG</item>
        <item>VP</item>
        <item>TNI</item>
        <item>TN</item>
        <item>LCA</item>
        <item>NDD</item>
        <item>QNG</item>
        <item>BTR</item>
        <item>DNO</item>
        <item>CM</item>
        <item>VL</item>
        <item>NB</item>
        <item>PT</item>
        <item>NT</item>
        <item>PY</item>
        <item>HNA</item>
        <item>HT</item>
        <item>DDT</item>
        <item>ST</item>
        <item>KT</item>
        <item>QB</item>
        <item>QT</item>
        <item>TV</item>
        <item>HGI</item>
        <item>SL</item>
        <item>BL</item>
        <item>YB</item>
        <item>TQ</item>
        <item>DDB</item>
        <item>LCH</item>
        <item>LS</item>
        <item>HG</item>
        <item>BK</item>
        <item>CB</item>
    </string-array>

    <string-array name="list_service">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Rest Station</item>
        <item>Other</item>

    </string-array>
    <string name="save">save</string>
    <string name="create_origin_destination">Create the origin/destination point</string>
    <string name="note_origin_destination">(The first point is the origin and the second point is the destination)</string>

    <string name="senderTitle">Host name: </string>
    <string name="TourNameTitle">Tour name: </string>
    <string name="timeTitle">Time: </string>
    <string name="fullnameTitle">Full Name: </string>
    <string name="IdTitle">ID: </string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="invitationTitle"><strong>You have a new invitation!!</strong></string>
    <string name="total">Total: </string>
</resources>
