<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".FotgotPasswordActivity">

    <TextView
        android:id="@+id/instructForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruct_forgot_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:id="@+id/selectOptionForForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/viaSmsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/sms_icon"
            android:drawablePadding="10dp"
            android:text="@string/via_sms"
            android:textColor="@color/colorGray"
            android:textAllCaps="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_button_forgot_password"
            android:elevation="10dp"/>

        <Button
            android:id="@+id/viaEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:text="@string/via_email"
            android:textColor="@color/colorGray"
            android:textAllCaps="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_toEndOf="@id/viaSmsButton"
            android:layout_marginStart="35dp"
            android:background="@drawable/border_button_forgot_password"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/enterInforForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20sp"
        android:background="@drawable/border_edit_text"
        android:padding="10dp"
        android:layout_below="@id/selectOptionForForgotPassword"
        android:layout_marginBottom="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterInforForgotPassword"
        android:text="@string/submit_button"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:background="@drawable/border_button"
        android:layout_centerHorizontal="true"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"/>

</RelativeLayout>