<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/edit_profile_labelTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/edit_profile_popup_exit_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/exit_icon"
            android:background="#00000000" />

        <TextView
            android:id="@+id/full_name_label_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_label"
            android:layout_below="@id/edit_profile_labelTitle"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray" />

        <EditText
            android:id="@+id/updateFullNameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/full_name_label_edit"
            android:layout_marginTop="5dp"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/email_label_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:layout_below="@id/updateFullNameBox"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/updateEmailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/email_label_edit"
            android:layout_marginTop="5dp"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/phone_label_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            android:layout_below="@id/updateEmailBox"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/updatePhoneBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="20sp"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/phone_label_edit"
            android:layout_marginTop="5dp"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/gender_label_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:layout_below="@id/updatePhoneBox"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/updateGenderBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/gender_label_edit"
            android:layout_marginTop="5dp"
            android:padding="10sp"/>

        <TextView
            android:id="@+id/dob_label_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob_label"
            android:layout_below="@id/updateGenderBox"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorGray"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/updateDobBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/dob_label_edit"
            android:layout_marginTop="5dp"
            android:padding="10sp"/>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateDobBox"
            android:text="Update"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/border_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"/>

    </RelativeLayout>

</ScrollView>