<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <fragment
        android:id="@+id/map_"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StopPointMap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_search_edit_text"
        android:layout_below="@id/layout"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <fragment
            android:id="@+id/autocomplete_fragment_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:src="@drawable/fakemarer_icon"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>



    <LinearLayout
        android:id="@+id/layoutCreateOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/quantum_white_100"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="false"
            android:layout_gravity="center"
            android:text="@string/create_origin_destination" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_origin_destination"
            android:textColor="@color/colorGray50"
            android:clickable="false"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgbMyLocation_"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/my_location_icon"
        android:layout_above="@id/layoutCreateOrigin"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="14dp"/>



    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="6dp">

        <ImageButton
            android:id="@+id/imgbTickButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_name"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="58dp"/>
    </LinearLayout>


</RelativeLayout>
